[gd_scene load_steps=25 format=3 uid="uid://nhkxam2x6p"]

[ext_resource type="Script" uid="uid://sg2nrjn27i2x" path="res://Animals/rat_base.gd" id="1_jt35k"]
[ext_resource type="Texture2D" uid="uid://djedieuwls04k" path="res://ArtAssets/RatSprite.png" id="1_mcfnd"]
[ext_resource type="AudioStream" uid="uid://dj1g2cvy3p3bb" path="res://Audio/SFX/Animals/RatMovement.wav" id="3_8oor0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aqgl5"]
atlas = ExtResource("1_mcfnd")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixm7m"]
atlas = ExtResource("1_mcfnd")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3ko4"]
atlas = ExtResource("1_mcfnd")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmcpd"]
atlas = ExtResource("1_mcfnd")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02usx"]
atlas = ExtResource("1_mcfnd")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awmgf"]
atlas = ExtResource("1_mcfnd")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo1qr"]
atlas = ExtResource("1_mcfnd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mpe1"]
atlas = ExtResource("1_mcfnd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mrm1"]
atlas = ExtResource("1_mcfnd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kvqw"]
atlas = ExtResource("1_mcfnd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thgm1"]
atlas = ExtResource("1_mcfnd")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2cr"]
atlas = ExtResource("1_mcfnd")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gig4l"]
atlas = ExtResource("1_mcfnd")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsac2"]
atlas = ExtResource("1_mcfnd")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe0f1"]
atlas = ExtResource("1_mcfnd")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_amvhg"]
atlas = ExtResource("1_mcfnd")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmb5x"]
atlas = ExtResource("1_mcfnd")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_svld8"]
atlas = ExtResource("1_mcfnd")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6q6wr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqgl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixm7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3ko4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmcpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02usx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awmgf")
}],
"loop": false,
"name": &"burrow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo1qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mpe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mrm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kvqw")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_thgm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gig4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsac2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe0f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amvhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmb5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svld8")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t5rsi"]
radius = 5.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ird67"]
radius = 55.3263

[node name="rat_base" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
y_sort_enabled = true
collision_layer = 8
collision_mask = 15
script = ExtResource("1_jt35k")
metadata/enemy_type = "rat"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_6q6wr")
animation = &"burrow"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_t5rsi")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
visible = false
shape = SubResource("CircleShape2D_ird67")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0

[node name="wander_timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="death_timer" type="Timer" parent="."]
one_shot = true

[node name="flee_timer" type="Timer" parent="."]
one_shot = true

[node name="movement" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8oor0")
autoplay = true
max_distance = 50.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="wander_timer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="flee_timer" to="." method="_on_flee_timer_timeout"]
